--- a/index.html
+++ b/index.html
@@ -5,4 +5,7 @@ Hello there, awesome person!
     Hello there, awesome person!
  </body>
     
+    <head>
+        <title>welcome to my web page</title>
+    </head>
 </html>  
