--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@ Hello there, awesome person!
 <html>
     
  <body>
-    Hello there, awesome person!
+     <h1>Hello there, awesome person!</h1>
  </body>
     
     <head>
