--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ Hello there, awesome person!
     
  <body>
      <h1>Hello there, awesome person!</h1>
+     <img src = https://avatars.githubusercontent.com/u/80886177?v=4>
  </body>
     
     <head>
