--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ Hello there, awesome person!
      <img src = https://avatars.githubusercontent.com/u/80886177?v=4>
      
      <ul>
-         <li>I am<li>
-         <li>JISHNU<li>
+         <li>I am</li>
+         <li>JISHNU</li>
      </ul>
  </body>
   
