--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Hello there, awesome person!
  <body>
      <h1>Hello there, awesome person!</h1>
      <img src = https://avatars.githubusercontent.com/u/80886177?v=4>
-     
+     <li><a href="https://github.com">This is a link to GitHub!</a></li>
      <ul>
          <li>I am</li>
          <li>JISHNU</li>
