--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ Hello there, awesome person!
  <body>
      <h1>Hello there, awesome person!</h1>
 
-      <a href="SOME-SITE> and </a>
+      <a href="https://www.google.com/"> and </a>
                
      <img src = https://avatars.githubusercontent.com/u/80886177?v=4>
 
