--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Hello there, awesome person!
  <body>
      <h1>Hello there, awesome person!</h1>
 
-      <a href="></a>
+      <a href="some site></a>
                
      <img src = https://avatars.githubusercontent.com/u/80886177?v=4>
 
